# win-recorder

./: Cargo.toml
examples/: basic_recording.rs
ipc-link/: Cargo.toml
ipc-link/src/: lib.rs
src/: diagnostics.rs  error.rs  lib.rs  main.rs  performance_monitor.rs
src/processing/: media.rs
src/recorder/: inner.rs  mod.rs  utils.rs
