[workspace]
members = ["ipc-link"]

[workspace.dependencies]
anyhow = "1.0.86"
spin_sleep = "1.2.0"
thiserror = "1.0.62"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace.dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Media_Audio",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Foundation_Numerics",
    "Media_MediaProperties",
    "Win32_Storage_Xps",
    "Win32_System_Com_StructuredStorage",
    "implement"
]

[package]
name = "win-recorder"
version = "0.1.0"
edition = "2021"

[lib]
name = "win_recorder"
path = "src/main.rs"

[[bin]]
name = "recorder"
path = "src/bin/recorder.rs"

[dependencies]
ipc-link = { path = "ipc-link" }
anyhow = { workspace = true }
spin_sleep = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dependencies.windows]
workspace = true